# has

./: CMakeLists.txt  LICENSE  README.md
include/has/: farptr.h  ialloc.h  imports.h  istream.h  types.h
include/has/math/: math.h
include/has/math/flt/: flt.h  fltmath.h  m44.h  v2.h  v3.h  v4.h
include/has/math/fp/: fp.h  fpmath.h  m44.h  v2.h  v3.h  v4.h
include/has/math/vec/: vecmath.h
include/has/system/: interrup.h  keyboard.h  machid.h  pci.h  pic.h  pit.h  rcs.h  sysasm.h
include/has/system/pnp/: address.h  data.h  id.h  pnp.h  regtype.h
include/has/system/pnp/control/: activate.h  cfg.h  csn.h  dmaconf.h  iobase.h  irqconf.h  logicdev.h  rcsdata.h  rddatprt.h  rngchk.h  seriso.h  status.h  wakecsn.h
include/has/system/pnp/resource/: cmpdevid.h  dmafmt.h  end.h  enddepf.h  fliopdsc.h  flmr32.h  idfansi.h  idfuni.h  ioprtdsc.h  irqfmt.h  ldevid.h  memrng.h  memrng32.h  resource.h  strtdepf.h  vendef.h  version.h
include/has/testing/: log.h
include/support/: allocatr.h  env.h  filestrm.h
src/math/flt/: flt.cpp  m44.cpp
src/math/fp/: fp.cpp  fptables.cpp  m44.cpp
src/system/: interrup.cpp  keyboard.cpp  pci.cpp  pic.cpp  pit.cpp  rcs.cpp  system.cpp
src/system/pnp/: data.cpp  id.cpp  pnp.cpp  resource.cpp
src/testing/: log.cpp
support/: env.cpp  filestrm.cpp
tests/: test.cpp
